--- a/Togla.Web/appsettings.Development.json
+++ b/Togla.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "togla.dev": "Host=localhost;Port=5432;Username=postgres;Password=;Database=Togla.dev;" 
   }
 }
