Creates simple GET and POST methods returning all stocks in db, and entering a new record with symbol ticker and price.

--- a/Togla.Web/Togla.Web.csproj
+++ b/Togla.Web/Togla.Web.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Togla.Data\Togla.Data.csproj" />
+    <ProjectReference Include="..\Togla.Services\Togla.Services.csproj" />
   </ItemGroup>
 
 
