Updates project to use net 5.0

--- a/Togla.Web/appsettings.Development.json
+++ b/Togla.Web/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
 
   "ConnectionStrings": {
-    "togla.dev": "Host=localhost;Port=5432;Username=postgres;Password=GNUsn0tunix;Database=Togla.dev;" 
+    "togla.dev": "Host=localhost;Port=5432;Username=postgres;Password=GNUsn0tunix;Database=togla.dev2;"
   }
 }
